--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Div Align Attribbute</title>
+    <meta http-equiv="refresh" content="0; url=https://danielousa.github.io/Portfolio_Power_Platform/Power Platform Website/index.html"/>
   </head>
   <body>
     <div align="left">
