--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="0; url=https://danielousa.github.io/Portfolio_Power_Platform/Power Platform Website/index.html" />
+  <meta http-equiv="refresh" content="0; url=https://danielousa.github.io/Portfolio_Power_Platform/PowerPlatformWebsite/index.html" />
   <title>Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
