Project_Power_Platform

--- a/PowerPlatformWebsite/index.html
+++ b/PowerPlatformWebsite/index.html
@@ -150,7 +150,7 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image01.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="images/testimonials/powerapps.png" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
@@ -165,7 +165,7 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image02.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="images/testimonials/powerautomate.jpeg" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
@@ -180,7 +180,7 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image03.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="images/testimonials/powerbi.png" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
@@ -192,7 +192,7 @@ https://www.tooplate.com/view/2120-ben-resume
                                 </div>
                             </div>
 
-                            <div class="item">
+                            <!--<div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
                                         <img src="images/testimonials/testimonial-image04.jpg" class="img-fluid" alt="testimonials image">
