Project_Power_Platform

--- a/PowerPlatformWebsite/index.html
+++ b/PowerPlatformWebsite/index.html
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2120-ben-resume
                     </li>
 
                     <li class="nav-item">
-                        <a href="#testimonials" class="nav-link smoothScroll">Reviews</a>
+                        <a href="#testimonials" class="nav-link smoothScroll">Power Platform Projects</a>
                     </li>
 
                     <!--<li class="nav-item">
@@ -58,7 +58,7 @@ https://www.tooplate.com/view/2120-ben-resume
                 </ul>
 
                 <div class="mt-lg-0 mt-3 mb-4 mb-lg-0">
-                    <a href="#" class="custom-btn btn" download>Download CV</a>
+                    <a href="files/CV_EN.pdf" class="custom-btn btn" target="_blank" download>Download CV</a>
                 </div>
             </div>
 
@@ -81,10 +81,10 @@ https://www.tooplate.com/view/2120-ben-resume
 
                             <h1 class="hero-title">👋 Daniel, an Industrial Engineer</h1>
 
-                            <a href="#" class="email-link">
-                              https://www.linkedin.com/in/daniel-santos-sousa/
+                            <a href="https://www.linkedin.com/in/daniel-santos-sousa/" class="email-link" target="_blank">
+                              Daniel Sousa's LinkedIn Profile
                             </a>
-                          
+                
                         </div>
                     </div>
 
