Project_Power_Platform

--- a/PowerPlatformWebsite/index.html
+++ b/PowerPlatformWebsite/index.html
@@ -154,10 +154,12 @@ https://www.tooplate.com/view/2120-ben-resume
                                     </div>
 
                                     <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                                        <p>Please view my</p>
 
-                                        <h6 class="mb-0">Ben</h6>
-                                        <span>Art Director</span>
+                                        <a href="https://github.com/danielousa/Portfolio_Power_Platform/blob/main/Power%20Apps/README.md" target="_blank">Power Apps Project</a>
+
+                                        <!--<h6 class="mb-0">Daniel</h6>
+                                        <span>Developer</span>-->
                                     </div>
                                 </div>
                             </div>
@@ -169,10 +171,12 @@ https://www.tooplate.com/view/2120-ben-resume
                                     </div>
 
                                     <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                                        <p>Please view my</p>
 
-                                        <h6 class="mb-0">Marie</h6>
-                                        <span>Marketing Consultant</span>
+                                        <a href="https://github.com/danielousa/Portfolio_Power_Platform/blob/main/Power%20Automate/README.md" target="_blank">Power Automate Project</a>
+
+                                        <!--<h6 class="mb-0">Marie</h6>
+                                        <span>Marketing Consultant</span>-->
                                     </div>
                                 </div>
                             </div>
@@ -184,10 +188,12 @@ https://www.tooplate.com/view/2120-ben-resume
                                     </div>
 
                                     <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                                        <p>Please view my</p>
 
-                                        <h6 class="mb-0">Jen</h6>
-                                        <span>Product Manager</span>
+                                        <a href="https://github.com/danielousa/Portfolio_Power_Platform/blob/main/Power%20BI/README.md" target="_blank">Power BI Project</a>
+
+                                        <!--<h6 class="mb-0">Jen</h6>
+                                        <span>Product Manager</span>-->
                                     </div>
                                 </div>
                             </div>
