--- a/PowerPlatformWebsite/index.html
+++ b/PowerPlatformWebsite/index.html
@@ -100,7 +100,8 @@ https://www.tooplate.com/view/2120-ben-resume
                 <div class="col-lg-6 col-md-6 col-12">
                     <h3 class="mb-4">This is Daniel's Resume</h3>
 
-                    <p>Hello! I'm glad to be read by you! Over my professional journey, I have worked in the protective solutions industry and automotive industry.</p>
+                    <p>Hello! I'm glad to be read by you!</p>
+                    <p> Over my professional journey, I have worked in the protective solutions industry and automotive industry.</p>
 
                     <p>During that time, I applied and deepened several methodologies integrated in Lean Manufacturing and Project Management. Also, I had the opportunity to coordinate several projects on the shop floor and develop Team Management competences and activity planning.</p>
 
