Project_Power_Platform

--- a/PowerPlatformWebsite/index.html
+++ b/PowerPlatformWebsite/index.html
@@ -108,9 +108,9 @@ https://www.tooplate.com/view/2120-ben-resume
                     <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
                         <li><strong>Full Name :</strong> Daniel Sousa </li>
 
-                        <li><strong>Age:</strong> 35</li>
+                        <li><strong>Age :</strong> 35</li>
 
-                        <li><strong>Website :</strong> company.co</li>
+                        <li><strong>Credly :</strong> <a href = "https://shorturl.at/bdjuH" target="_blank"> click to website</a> </li>
 
                         <li><strong>Email :</strong> danielsousa.433@gmail.com</li>
                     </ul>
@@ -199,17 +199,19 @@ https://www.tooplate.com/view/2120-ben-resume
                                 </div>
                             </div>
 
-                            <!--<div class="item">
+                            <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image04.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="images/testimonials/copilotstudio.jpeg" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
+                                        <p>Please view my</p>
 
-                                        <h6 class="mb-0">Wilson</h6>
-                                        <span>Web Developer</span>
+                                        <a href="https://github.com/danielousa/Portfolio_Power_Platform/blob/main/Copilot%20Studio/README.md" target="_blank">Copilot Studio Project</a>
+
+                                        <!--<h6 class="mb-0">Wilson</h6>
+                                        <span>Web Developer</span>-->
                                     </div>
                                 </div>
                             </div>
@@ -314,9 +316,9 @@ https://www.tooplate.com/view/2120-ben-resume
 
                     <span class="faq-info-text">Please send us a message if you have anything to say. Send an email message to <strong>contact (at) tooplate (dot) com</strong></span>
 
-                </div>
+                </div> -->
 
-           	 </div><!-- col -->
+           	 <!--</div> <!-- col -->
         	</div><!-- row -->
         </div><!-- container -->
     </section>
